2003-03-24  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* doc/contrib.texi (Contributors): Update Janis Johnson.

2003-03-23  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR target/10072
	* combine.c (simplify_if_then_else): Check that the mode
	has MODE_INT class before applying the (OP Z (mult COND C2))
	transformation.

2003-03-23  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR optimization/9414
	* config/sparc/sparc.md (widening peepholes): Use
	widen_memory_access instead of change_address.

2003-03-23  Mark Mitchell  <mark@codesourcery.com>

	PR c++/7086
	* c-typeck.c (c_mark_addressable): Adjust calls to
	put_var_into_stack.
	* expr.c (expand_expr): Likewise.
	* function.c (put_var_into_stack): Add rescan parameter.  Do not
	call fixup_var_refs when rescan is false.
	(gen_mem_addressof): Likewise.
	(assign_parms): Adjust calls to put_var_into_stack.
	(setjmp_protect): Likewise.
	(setjmp_protect_args): Likewise.
	* rtl.h (gen_mem_addressof): Change prototype.
	* stmt.c (expand_decl): Adjust calls to put_var_into_stack.
	* tree.h (put_var_into_stack): Change prototype.

2003-03-23  Arpad Beszedes <beszedes@cc.u-szeged.hu>

	PR middle-end/9967
	* builtins.c (expand_builtin_fputs): When optimizing for size,
	don't transform fputs into fwrite.

2003-03-23  Glen Nakamura <glen@imodulo.com>

	PR c/8224
	* fold-const.c (extract_muldiv_1): Don't pass through type conversions
	when signedness changes for division or modulus.

2003-03-24  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/sysv4.h (ASM_OUTPUT_ALIGNED_BSS): Remove unnecessary
	globalize_label.

2003-03-23  Roger Sayle  <roger@eyesopen.com>

	PR c/10178
	* stmt.c (expand_end_case_type): Check for overflow in range when
	determining whether to use a bit-test implementation.

2003-03-23  Richard Henderson  <rth@redhat.com>

	* cfgcleanup.c (try_optimize_cfg): Allow merging of tablejumps
	before flow2.
	* cfgrtl.c (try_redirect_by_replacing_jump): Similarly.
