@@ -1,3 +1,7 @@
+2003-03-24  Jakub Jelinek  <jakub@redhat.com>
+
+	* dojump.c (do_jump): Handle UNSAVE_EXPR specially.
+
 2003-03-24  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* doc/contrib.texi (Contributors): Update Janis Johnson.
